components/monitoring/prometheus/staging/stone-stg-rh01/poc/victoriametrics/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: appstudio-vm-poc
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
  labels:
    app.kubernetes.io/part-of: stone-stg-rh01-vm-poc
    network.openshift.io/policy-group: monitoring
    openshift.io/cluster-monitoring: "true"
