components/monitoring/prometheus/staging/stone-stg-rh01/poc/victoriametrics/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: vm-poc-private-ingress
  namespace: appstudio-vm-poc
spec:
  podSelector: {}
  policyTypes: [Ingress]
  ingress:
    - from:
        - podSelector: {}
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: vm-poc-grafana-vmselect
  namespace: appstudio-vm-poc
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: vmselect
      app.kubernetes.io/instance: vm-poc
  policyTypes: [Ingress]
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: appstudio-grafana
          podSelector:
            matchLabels:
              app: grafana-oauth
      ports:
        - protocol: TCP
          port: 8481
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: vm-poc-alloy-vmagent-write
  namespace: appstudio-vm-poc
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: vmagent
      app.kubernetes.io/instance: vm-poc
      shard-num: "0"
  policyTypes: [Ingress]
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: appstudio-alloy-poc
          podSelector:
            matchLabels:
              app.kubernetes.io/name: alloy
              app.kubernetes.io/part-of: alloy-poc
      ports:
        - protocol: TCP
          port: 8429
